--- a/learn/springboot/app/src/main/resources/templates/product.html
+++ b/learn/springboot/app/src/main/resources/templates/product.html
@@ -10,7 +10,10 @@
     <ul>
         <li th:each="product : ${productLs}">
             <h2 th:text="${product.product_name}">商品名称</h2>
-            <p th:text="${product.product_desc}">商品描述</p>
+            <p th:text="${product.product_price}">商品价格</p>
+            <p th:text="${product.start_date}">开始日期</p>
+            <p th:text="${product.end_date}">结束日期</p>
+            <p><a th:href="'/page/productdetail.html?product_id=' + ${product.product_id}">进入秒杀</a></p>
         </li>
     </ul>
 </body>
